# InteligenciaArtificial

./: CMakeLists.txt  hill_climbing.h  linked_list.h  minimax.h  missionaries.c  missionaries.h  state.h  state_space_search.h  tic_tac_toe.c  tic_tac_toe.h  travelling_salesman.c  travelling_salesman.h
common/: state.h  util.c  util.h
data_structures/: heap.h  linked_list.h
missionaries/: main.c  missionaries.c  missionaries.h
paris_subway/: main.c  paris_subway.c  paris_subway.h  subway_map.h
search/: hill_climbing.h  minimax.h  state_space_search.h
tic_tac_toe/: main.c  tic_tac_toe.c  tic_tac_toe.h
travelling_salesman/: main.c  travelling_salesman.c  travelling_salesman.h
